--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,7 +56,7 @@
               content_copy
             </mat-icon>
           </button> -->
-          <button mat-menu-item>
+          <button (click)="share(element)" mat-menu-item>
             <mat-icon color="primary">share</mat-icon>
             <span>Share</span>
           </button>
