--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,24 @@
-
 <!-- Toolbar -->
 <div class="toolbar app-toolbar" role="banner">
-  <!-- <img width="60" alt="Angular Logo" src="assets/ilauncher.svg" style="mix-blend-mode: add" /> -->
   <mat-icon class="logo-icon">rocket_launch</mat-icon>
   <span>Demos Launcher - {{version}}</span>
   <div class="spacer"></div>
+  <div *ngIf="user$ | async as user">
+    <button mat-icon-button [matMenuTriggerFor]="menu" class="icon-button">
+      <mat-icon>
+      <img class="avatar" referrerPolicy="no-referrer" [src]="user.photoUrl"></mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="migrate()">Migrate from local DB</button>
+      <button mat-menu-item (click)="logout()">Logout</button>
+    </mat-menu>
+  </div>
   <button mat-icon-button class="example-icon favorite-icon" (click)="openConfig()">
     <mat-icon>settings</mat-icon>
   </button>
   <mat-divider [vertical]="true" style="height: 50%; border-color:white;"></mat-divider>
-  <button mat-icon-button class="example-icon favorite-icon" (click)="openSolutionCentral()" matTooltip="Go to the Solution Central article">
+  <button mat-icon-button class="example-icon favorite-icon" (click)="openSolutionCentral()"
+    matTooltip="Go to the Solution Central article">
     <mat-icon>help_outline</mat-icon>
   </button>
   <button mat-icon-button class="example-icon favorite-icon" (click)="openGithub()" matTooltip="Go to Github relases">
