--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,12 @@
 .app-toolbar {
   -webkit-app-region: drag;
   position: sticky;
-  position: -webkit-sticky; /* For macOS/iOS Safari */
-  top: 0; /* Sets the sticky toolbar to be on top */
-  z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
+  position: -webkit-sticky;
+  /* For macOS/iOS Safari */
+  top: 0;
+  /* Sets the sticky toolbar to be on top */
+  z-index: 1000;
+  /* Ensure that your app's content doesn't overlap the toolbar */
 }
 
 .logo-icon {
@@ -49,23 +52,9 @@ p {
   font-weight: 600;
 }
 
-.toolbar img {
-  margin: 0 16px;
-}
-
 .toolbar #twitter-logo {
   height: 40px;
   margin: 0 8px;
-}
-
-.toolbar #youtube-logo {
-  height: 40px;
-  margin: 0 16px;
-}
-
-.toolbar #twitter-logo:hover,
-.toolbar #youtube-logo:hover {
-  opacity: 0.8;
 }
 
 .content {
@@ -75,6 +64,19 @@ p {
   max-width: 960px;
   flex-direction: column;
   // align-items: center;
+}
+
+button.icon-button{
+  background: none;
+  padding: 0;
+  border: 0;
+  cursor: pointer;
+}
+
+img.avatar {
+  border-radius: 50%;
+  height: 24px;
+  width: 24px;
 }
 
 svg.material-icons {
