--- a/src/app/org-setup/org-setup.component.html
+++ b/src/app/org-setup/org-setup.component.html
@@ -4,13 +4,8 @@
         <mat-icon>navigate_before</mat-icon>Back
       </button>
       <div class="spacer"></div>
-      <!-- <button mat-button color="warn" type="button"
-        (click)="reinstall()"
-        matTooltip="Install all Chrome profiles in a new Chrome">
-        <mat-icon>autorenew</mat-icon>Reinstall Chrome Profiles
-      </button>
 
-      <mat-divider [vertical]="true"></mat-divider> -->
+      <mat-divider [vertical]="true"></mat-divider>
       <div [matTooltip]="'Save & Install'">
       <button mat-button color="primary" type="submit" [disabled]="!profileForm.valid || !profileForm.dirty">
         <mat-icon>check</mat-icon>Save
