--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,15 @@
   <mat-icon class="logo-icon">rocket_launch</mat-icon>
   <span>Demos Launcher - {{version}}</span>
   <div class="spacer"></div>
-  <button mat-icon-button class="example-icon favorite-icon" (click)="openConfig()">
+  <button mat-icon-button class="toolbar-button favorite-icon" (click)="openConfig()">
     <mat-icon>settings</mat-icon>
   </button>
   <mat-divider [vertical]="true" style="height: 50%; border-color:white;"></mat-divider>
-  <button mat-icon-button class="example-icon favorite-icon" (click)="openSolutionCentral()"
+  <button mat-icon-button class="toolbar-button favorite-icon" (click)="openSolutionCentral()"
     matTooltip="Go to the Solution Central article">
     <mat-icon>help_outline</mat-icon>
   </button>
-  <button mat-icon-button class="example-icon favorite-icon" (click)="openGithub()" matTooltip="Go to Github relases">
+  <button mat-icon-button class="toolbar-button favorite-icon" (click)="openGithub()" matTooltip="Go to Github relases">
     <mat-icon>cloud_download</mat-icon>
   </button>
 </div>
