--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -14,7 +14,7 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-checkbox matTooltip="Feature allowing auto-login through a middleware" formControlName="useMiddleware">Autologin (Experimental)</mat-checkbox>
+    <!-- <mat-checkbox matTooltip="Feature allowing auto-login through a middleware" formControlName="useMiddleware">Autologin (Experimental)</mat-checkbox> -->
   </form>
 </mat-dialog-content>
 
